// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TwoFactorAuthenticationModal /> render() Validate verification code should render modal with Recovery codes step because validation is successful and the secret was saved to the database: Recovery codes step 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup 2FA
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="banner bannerSuccess"
              >
                <img
                  alt="icon"
                  class="icon"
                  src="test-file-stub"
                />
                <div
                  class="bannerText"
                >
                  <span>
                    Two-factor authentication enabled.
                  </span>
                </div>
              </div>
              
              <div
                class="textSection mb16"
              >
                Before you leave, keep your recovery codes in a safe place. They are the only alternative ways to access your account.
              </div>
              <ul
                class="recoveryCodesContainer mb16"
              >
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh01
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh02
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh03
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh04
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh05
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh06
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh07
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh08
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh09
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh10
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh11
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh12
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh13
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh14
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh15
                </li>
                <li
                  class="recoveryCodesItem"
                >
                  abcdefgh16
                </li>
              </ul>
              <div
                class="actionButtonsContainer mb16"
              >
                <button
                  class="wrapper actionButton mr8 fill secondary medium"
                  type="button"
                >
                  <span
                    class="wrapper"
                  >
                    <i
                      class="material-icons icon isLeft medium"
                    >
                      download
                    </i>
                    Download
                  </span>
                </button>
                <a
                  class="actionAnchor mr8"
                  href="http://localhost/2fa/recovery-codes/print"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <button
                    class="wrapper actionButton fill secondary medium"
                    type="button"
                  >
                    <span
                      class="wrapper"
                    >
                      <i
                        class="material-icons icon isLeft medium"
                      >
                        print
                      </i>
                      Print
                    </span>
                  </button>
                </a>
                <button
                  class="wrapper actionButton fill secondary medium"
                  data-clipboard-text="abcdefgh01
abcdefgh02
abcdefgh03
abcdefgh04
abcdefgh05
abcdefgh06
abcdefgh07
abcdefgh08
abcdefgh09
abcdefgh10
abcdefgh11
abcdefgh12
abcdefgh13
abcdefgh14
abcdefgh15
abcdefgh16"
                  id="copyRecoveryCodes"
                  type="button"
                >
                  <span
                    class="wrapper"
                  >
                    <i
                      class="material-icons icon isLeft medium"
                    >
                      content_copy
                    </i>
                    Copy
                  </span>
                </button>
              </div>
              <div>
                <div>
                  <label
                    class="label label checkBox"
                    for="isRecoveryCodesSaved"
                  >
                    <input
                      class="input"
                      id="isRecoveryCodesSaved"
                      name="isRecoveryCodesSaved"
                      type="checkbox"
                    />
                    I've saved my recovery codes
                  </label>
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="wrapper full-width fill primary medium isDisabled"
                disabled=""
                type="button"
              >
                <span
                  class="full-width"
                >
                  Continue
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() Validate verification code should render modal with error banner because saving the secret failed: error banner and continue button disabled 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup 2FA
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="banner bannerError"
              >
                <img
                  alt="icon"
                  class="icon"
                  src="test-file-stub"
                />
                <div
                  class="bannerText"
                >
                  <span>
                    foo error saveTwoFASecret
                  </span>
                </div>
              </div>
              <div
                class="headingBold"
              >
                Step 3: Verify your code
              </div>
              <div
                class="textSection mb16"
              >
                Enter the 6-digit verification code generated from your authenticator app.
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    id="input-text-3"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                Back
              </button>
              <button
                class="wrapper fill primary medium isDisabled"
                disabled=""
                type="button"
              >
                Continue
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() Validate verification code should render modal with error banner because saving the secret failed: no error banner and continue button enabled 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup 2FA
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              
              <div
                class="headingBold"
              >
                Step 3: Verify your code
              </div>
              <div
                class="textSection mb16"
              >
                Enter the 6-digit verification code generated from your authenticator app.
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    id="input-text-3"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                Back
              </button>
              <button
                class="wrapper fill primary medium"
                type="button"
              >
                Continue
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() Validate verification code should render modal with error banner because validation failed: error banner and continue button disabled 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup 2FA
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="banner bannerError"
              >
                <img
                  alt="icon"
                  class="icon"
                  src="test-file-stub"
                />
                <div
                  class="bannerText"
                >
                  <span>
                    foo error validateVerificationCode
                  </span>
                </div>
              </div>
              <div
                class="headingBold"
              >
                Step 3: Verify your code
              </div>
              <div
                class="textSection mb16"
              >
                Enter the 6-digit verification code generated from your authenticator app.
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    id="input-text-2"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                Back
              </button>
              <button
                class="wrapper fill primary medium isDisabled"
                disabled=""
                type="button"
              >
                Continue
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() Validate verification code should render modal with error banner because validation failed: no error banner and continue button enabled 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup 2FA
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              
              <div
                class="headingBold"
              >
                Step 3: Verify your code
              </div>
              <div
                class="textSection mb16"
              >
                Enter the 6-digit verification code generated from your authenticator app.
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    id="input-text-2"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                Back
              </button>
              <button
                class="wrapper fill primary medium"
                type="button"
              >
                Continue
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should not render the modal 1`] = `
<body>
  <div />
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render modal with QR Code step 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup 2FA
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              
              <div
                class="headingBold"
              >
                Step 1: Download an authenticator app
              </div>
              <div
                class="textSection"
              >
                Download and install any authenticator app (
                <a
                  href="https://support.google.com/accounts/answer/1066447"
                  rel="noreferrer"
                  target="_blank"
                >
                  Eg. Google Authenticator
                </a>
                ) on your phone.
              </div>
              <div
                class="headingBold mt24"
              >
                Step 2: Scan the QR code
              </div>
              <div
                class="textSection"
              >
                Open the authenticator app and scan the image below using your phone’s camera.
              </div>
              <div
                class="qrCodeContainer"
              >
                <img
                  alt="The QR Code to scan"
                  id="qrCodeImage"
                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJQAAACUCAYAAAB1PADUAAAAAklEQVR4AewaftIAAATZSURBVO3BQY4cSRIEQdNA/f/Lun30UwCJ9GoOuSaCP1K15KRq0UnVopOqRSdVi06qFp1ULTqpWnRSteikatFJ1aKTqkUnVYtOqhadVC06qVr0yUtAfpOaGyCTmk1AbtRMQJ5QMwH5TWreOKladFK16KRq0SfL1GwC8oSaCcgTam7UPKFmk5pNQDadVC06qVp0UrXoky8D8oSaJ4A8oeYJIJOaCcik5jcBeULNN51ULTqpWnRSteiTf4yaCcgEZFJzo+YJIJOaCcik5l9yUrXopGrRSdWiT/5xam6AvKFmAjIBuQEyqfmbnVQtOqladFK16JMvU/ObgExqJiCbgNyo+SY1/yUnVYtOqhadVC36ZBmQP0nNBGRSMwGZ1ExAJjUTkEnNBGRSMwGZ1NwA+S87qVp0UrXopGrRJy+p+ZsAmdRMQCY1E5BJzTep+ZucVC06qVp0UrXok5eATGomIJvUTGpu1NwAmdRMQJ4AMql5A8gmNd90UrXopGrRSdUi/JEXgNyomYDcqNkE5Ak1N0Bu1NwA+SY1N0Bu1LxxUrXopGrRSdUi/JE/CMikZgLyhpoJyKTmTwIyqZmA3KiZgExqftNJ1aKTqkUnVYs+eQnIjZobNTdqboBMajYBmdRMQCY1E5BJzZ8EZFKz6aRq0UnVopOqRZ+8pGYCcgNkUjMBuVEzqbkBMql5Qs0TQCY1TwCZ1LwB5DedVC06qVp0UrUIf+QFIJOaCcikZhOQJ9RMQN5QMwH5L1FzA2RS88ZJ1aKTqkUnVYs+WQbkBsikZgJyo+ZGzQ2QSc0E5Akgk5oJyKRmAjKpmYBMam6APKFm00nVopOqRSdViz75MjU3QG7UPAFkk5oJyKTmRs2Nmhs1E5A3gExqNp1ULTqpWnRStQh/ZBGQGzU3QG7UPAFkUjMBmdRMQG7UTEAmNb8JyI2abzqpWnRSteikatEnLwG5UTMBmdTcqJmATGomIDdAnlAzAZmATGomIE+omYC8oeYGyKTmjZOqRSdVi06qFn2yTM0TQCY1E5BJzQTkRs0NkCfU3AC5UTMBuVEzAZnUvKFm00nVopOqRSdViz75MiBvqLlR84aaGyCTmgnIpOZPAjKpuQEyqXnjpGrRSdWik6pFn/wyNROQCcgTaiYgk5obIJOaSc2NmgnIpGYCcgPkCSCTmgnIpOabTqoWnVQtOqlahD/yFwMyqXkDyBNqboBMaiYgk5ongExqJiBPqHnjpGrRSdWik6pFn7wE5DepmdRMQCY1N0B+E5AngExqnlDzm06qFp1ULTqpWvTJMjWbgNwAmdTcAHlCzRtqboDcqPkmIJOaN06qFp1ULTqpWvTJlwF5Qs2fpGYC8oaaJ4C8AeRGzTedVC06qVp0UrXok38ckCeATGpugExqboBMar4JyI2aTSdVi06qFp1ULfrk/5yaCcgEZJOaCcikZgIyqZmATGpugExqNp1ULTqpWnRSteiTL1PzTWomIJOaCcgbaiYgN0AmNTdAJjUTkEnNjZoJyDedVC06qVp0UrXok2VAfhOQGyCTmhs1E5AbNROQSc0EZFIzAZmAvAFkUvNNJ1WLTqoWnVQtwh+pWnJSteikatFJ1aKTqkUnVYtOqhadVC06qVp0UrXopGrRSdWik6pFJ1WLTqoWnVQt+h8x8UUwJOxn0QAAAABJRU5ErkJggg=="
                />
              </div>
              <div
                class="cantScanQrCodeContainer"
              >
                <button
                  class="wrapper ghost primary medium"
                  type="button"
                >
                  Can't scan the QR code?
                </button>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                class="wrapper fill primary medium"
                type="button"
              >
                Continue
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render modal with QR Code step having error banner 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup 2FA
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="banner bannerError"
              >
                <img
                  alt="icon"
                  class="icon"
                  src="test-file-stub"
                />
                <div
                  class="bannerText"
                >
                  <span>
                    Failed to fetch the QR code. Please try again.
                  </span>
                </div>
              </div>
              <div
                class="headingBold"
              >
                Step 1: Download an authenticator app
              </div>
              <div
                class="textSection"
              >
                Download and install any authenticator app (
                <a
                  href="https://support.google.com/accounts/answer/1066447"
                  rel="noreferrer"
                  target="_blank"
                >
                  Eg. Google Authenticator
                </a>
                ) on your phone.
              </div>
              <div
                class="headingBold mt24"
              >
                Step 2: Scan the QR code
              </div>
              <div
                class="textSection"
              >
                Open the authenticator app and scan the image below using your phone’s camera.
              </div>
              
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                class="wrapper fill primary medium isDisabled"
                disabled=""
                type="button"
              >
                Continue
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render modal with QR Code step having renewed secret 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup 2FA
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              
              <div
                class="headingBold"
              >
                Step 1: Download an authenticator app
              </div>
              <div
                class="textSection"
              >
                Download and install any authenticator app (
                <a
                  href="https://support.google.com/accounts/answer/1066447"
                  rel="noreferrer"
                  target="_blank"
                >
                  Eg. Google Authenticator
                </a>
                ) on your phone.
              </div>
              <div
                class="headingBold mt24"
              >
                Step 2: Scan the QR code
              </div>
              <div
                class="textSection"
              >
                Open the authenticator app and scan the image below using your phone’s camera.
              </div>
              <div
                class="qrCodeContainer"
              >
                <img
                  alt="The QR Code to scan"
                  id="qrCodeImage"
                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJQAAACUCAYAAAB1PADUAAAAAklEQVR4AewaftIAAATZSURBVO3BQY4cSRIEQdNA/f/Lun30UwCJ9GoOuSaCP1K15KRq0UnVopOqRSdVi06qFp1ULTqpWnRSteikatFJ1aKTqkUnVYtOqhadVC06qVr0yUtAfpOaGyCTmk1AbtRMQJ5QMwH5TWreOKladFK16KRq0SfL1GwC8oSaCcgTam7UPKFmk5pNQDadVC06qVp0UrXoky8D8oSaJ4A8oeYJIJOaCcik5jcBeULNN51ULTqpWnRSteiTf4yaCcgEZFJzo+YJIJOaCcik5l9yUrXopGrRSdWiT/5xam6AvKFmAjIBuQEyqfmbnVQtOqladFK16JMvU/ObgExqJiCbgNyo+SY1/yUnVYtOqhadVC36ZBmQP0nNBGRSMwGZ1ExAJjUTkEnNBGRSMwGZ1NwA+S87qVp0UrXopGrRJy+p+ZsAmdRMQCY1E5BJzTep+ZucVC06qVp0UrXok5eATGomIJvUTGpu1NwAmdRMQJ4AMql5A8gmNd90UrXopGrRSdUi/JEXgNyomYDcqNkE5Ak1N0Bu1NwA+SY1N0Bu1LxxUrXopGrRSdUi/JE/CMikZgLyhpoJyKTmTwIyqZmA3KiZgExqftNJ1aKTqkUnVYs+eQnIjZobNTdqboBMajYBmdRMQCY1E5BJzZ8EZFKz6aRq0UnVopOqRZ+8pGYCcgNkUjMBuVEzqbkBMql5Qs0TQCY1TwCZ1LwB5DedVC06qVp0UrUIf+QFIJOaCcikZhOQJ9RMQN5QMwH5L1FzA2RS88ZJ1aKTqkUnVYs+WQbkBsikZgJyo+ZGzQ2QSc0E5Akgk5oJyKRmAjKpmYBMam6APKFm00nVopOqRSdViz75MjU3QG7UPAFkk5oJyKTmRs2Nmhs1E5A3gExqNp1ULTqpWnRStQh/ZBGQGzU3QG7UPAFkUjMBmdRMQG7UTEAmNb8JyI2abzqpWnRSteikatEnLwG5UTMBmdTcqJmATGomIDdAnlAzAZmATGomIE+omYC8oeYGyKTmjZOqRSdVi06qFn2yTM0TQCY1E5BJzQTkRs0NkCfU3AC5UTMBuVEzAZnUvKFm00nVopOqRSdViz75MiBvqLlR84aaGyCTmgnIpOZPAjKpuQEyqXnjpGrRSdWik6pFn/wyNROQCcgTaiYgk5obIJOaSc2NmgnIpGYCcgPkCSCTmgnIpOabTqoWnVQtOqlahD/yFwMyqXkDyBNqboBMaiYgk5ongExqJiBPqHnjpGrRSdWik6pFn7wE5DepmdRMQCY1N0B+E5AngExqnlDzm06qFp1ULTqpWvTJMjWbgNwAmdTcAHlCzRtqboDcqPkmIJOaN06qFp1ULTqpWvTJlwF5Qs2fpGYC8oaaJ4C8AeRGzTedVC06qVp0UrXok38ckCeATGpugExqboBMar4JyI2aTSdVi06qFp1ULfrk/5yaCcgEZJOaCcikZgIyqZmATGpugExqNp1ULTqpWnRSteiTL1PzTWomIJOaCcgbaiYgN0AmNTdAJjUTkEnNjZoJyDedVC06qVp0UrXok2VAfhOQGyCTmhs1E5AbNROQSc0EZFIzAZmAvAFkUvNNJ1WLTqoWnVQtwh+pWnJSteikatFJ1aKTqkUnVYtOqhadVC06qVp0UrXopGrRSdWik6pFJ1WLTqoWnVQt+h8x8UUwJOxn0QAAAABJRU5ErkJggg=="
                />
              </div>
              <div
                class="cantScanQrCodeContainer"
              >
                <button
                  class="wrapper ghost primary medium"
                  type="button"
                >
                  Can't scan the QR code?
                </button>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                class="wrapper fill primary medium"
                type="button"
              >
                Continue
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render modal with QR code step after pressing back button 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup 2FA
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              
              <div
                class="headingBold"
              >
                Step 1: Download an authenticator app
              </div>
              <div
                class="textSection"
              >
                Download and install any authenticator app (
                <a
                  href="https://support.google.com/accounts/answer/1066447"
                  rel="noreferrer"
                  target="_blank"
                >
                  Eg. Google Authenticator
                </a>
                ) on your phone.
              </div>
              <div
                class="headingBold mt24"
              >
                Step 2: Scan the QR code
              </div>
              <div
                class="textSection"
              >
                Open the authenticator app and scan the image below using your phone’s camera.
              </div>
              <div
                class="qrCodeContainer"
              >
                <img
                  alt="The QR Code to scan"
                  id="qrCodeImage"
                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJQAAACUCAYAAAB1PADUAAAAAklEQVR4AewaftIAAATZSURBVO3BQY4cSRIEQdNA/f/Lun30UwCJ9GoOuSaCP1K15KRq0UnVopOqRSdVi06qFp1ULTqpWnRSteikatFJ1aKTqkUnVYtOqhadVC06qVr0yUtAfpOaGyCTmk1AbtRMQJ5QMwH5TWreOKladFK16KRq0SfL1GwC8oSaCcgTam7UPKFmk5pNQDadVC06qVp0UrXoky8D8oSaJ4A8oeYJIJOaCcik5jcBeULNN51ULTqpWnRSteiTf4yaCcgEZFJzo+YJIJOaCcik5l9yUrXopGrRSdWiT/5xam6AvKFmAjIBuQEyqfmbnVQtOqladFK16JMvU/ObgExqJiCbgNyo+SY1/yUnVYtOqhadVC36ZBmQP0nNBGRSMwGZ1ExAJjUTkEnNBGRSMwGZ1NwA+S87qVp0UrXopGrRJy+p+ZsAmdRMQCY1E5BJzTep+ZucVC06qVp0UrXok5eATGomIJvUTGpu1NwAmdRMQJ4AMql5A8gmNd90UrXopGrRSdUi/JEXgNyomYDcqNkE5Ak1N0Bu1NwA+SY1N0Bu1LxxUrXopGrRSdUi/JE/CMikZgLyhpoJyKTmTwIyqZmA3KiZgExqftNJ1aKTqkUnVYs+eQnIjZobNTdqboBMajYBmdRMQCY1E5BJzZ8EZFKz6aRq0UnVopOqRZ+8pGYCcgNkUjMBuVEzqbkBMql5Qs0TQCY1TwCZ1LwB5DedVC06qVp0UrUIf+QFIJOaCcikZhOQJ9RMQN5QMwH5L1FzA2RS88ZJ1aKTqkUnVYs+WQbkBsikZgJyo+ZGzQ2QSc0E5Akgk5oJyKRmAjKpmYBMam6APKFm00nVopOqRSdViz75MjU3QG7UPAFkk5oJyKTmRs2Nmhs1E5A3gExqNp1ULTqpWnRStQh/ZBGQGzU3QG7UPAFkUjMBmdRMQG7UTEAmNb8JyI2abzqpWnRSteikatEnLwG5UTMBmdTcqJmATGomIDdAnlAzAZmATGomIE+omYC8oeYGyKTmjZOqRSdVi06qFn2yTM0TQCY1E5BJzQTkRs0NkCfU3AC5UTMBuVEzAZnUvKFm00nVopOqRSdViz75MiBvqLlR84aaGyCTmgnIpOZPAjKpuQEyqXnjpGrRSdWik6pFn/wyNROQCcgTaiYgk5obIJOaSc2NmgnIpGYCcgPkCSCTmgnIpOabTqoWnVQtOqlahD/yFwMyqXkDyBNqboBMaiYgk5ongExqJiBPqHnjpGrRSdWik6pFn7wE5DepmdRMQCY1N0B+E5AngExqnlDzm06qFp1ULTqpWvTJMjWbgNwAmdTcAHlCzRtqboDcqPkmIJOaN06qFp1ULTqpWvTJlwF5Qs2fpGYC8oaaJ4C8AeRGzTedVC06qVp0UrXok38ckCeATGpugExqboBMar4JyI2aTSdVi06qFp1ULfrk/5yaCcgEZJOaCcikZgIyqZmATGpugExqNp1ULTqpWnRSteiTL1PzTWomIJOaCcgbaiYgN0AmNTdAJjUTkEnNjZoJyDedVC06qVp0UrXok2VAfhOQGyCTmhs1E5AbNROQSc0EZFIzAZmAvAFkUvNNJ1WLTqoWnVQtwh+pWnJSteikatFJ1aKTqkUnVYtOqhadVC06qVp0UrXopGrRSdWik6pFJ1WLTqoWnVQt+h8x8UUwJOxn0QAAAABJRU5ErkJggg=="
                />
              </div>
              <div
                class="cantScanQrCodeContainer"
              >
                <button
                  class="wrapper ghost primary medium"
                  type="button"
                >
                  Can't scan the QR code?
                </button>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                class="wrapper fill primary medium"
                type="button"
              >
                Continue
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationModal /> render() should render modal with Validate authenticator code step 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Setup 2FA
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              
              <div
                class="headingBold"
              >
                Step 3: Verify your code
              </div>
              <div
                class="textSection mb16"
              >
                Enter the 6-digit verification code generated from your authenticator app.
              </div>
              <div>
                <div
                  class="wrapper"
                >
                  <input
                    class="input"
                    id="input-text-1"
                    name="verificationCode"
                    placeholder="Enter 6-digit verification code from app"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                Back
              </button>
              <button
                class="wrapper fill primary medium isDisabled"
                disabled=""
                type="button"
              >
                Continue
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;
